samples/_failures_safe/1761391877_54ce78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12e71e1d.c: In function ‘main’:
./samples/SAFE/__tmp_12e71e1d.c:141:9: error: expected declaration or statement at end of input
  141 |         display_menu();
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_12e71e1d.c:141:9: error: expected declaration or statement at end of input
